--- a/assets/scss/_base_dark.scss
+++ b/assets/scss/_base_dark.scss
@@ -63,7 +63,7 @@
   }
 
   table {
-    border-collapse: collapse;
+    border-collapse: separate;
   }
 
   table td,
@@ -72,7 +72,7 @@
   }
 
   table tr:first-child th {
-    border-top: 0;
+    border-top: 1 px;
   }
 
   table tr:last-child td {
