--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -1,3 +1,5 @@
+{{ partial "home/hero.html" . }}
+
 <section class="container centered">
   <div class="about">
     {{ partialCached "home/avatar.html" . }}
@@ -9,3 +11,5 @@
 
   {{ partialCached "home/extensions.html" . }}
 </section>
+
+{{ partial "home/featured.html" . }}
