--- a/themes/gokarna/layouts/partials/head.html
+++ b/themes/gokarna/layouts/partials/head.html
@@ -50,6 +50,9 @@
     {{ $jsBundle := resources.Match "js/**.js" | resources.Concat "js/bundle.js" | minify | resources.Fingerprint "sha256" }}
     <script src="{{ $jsBundle.RelPermalink }}" integrity="{{ $jsBundle.Data.Integrity }}"></script>
 
+    <!-- Math rendering support -->
+    {{- partial "math.html" . -}}
+
     <!-- Option for user to inject custom html -->
     {{ if .Site.Params.CustomHeadHTML }}
     {{ .Site.Params.CustomHeadHTML | safeHTML }}
